--- a/css/style.css
+++ b/css/style.css
@@ -349,4 +349,90 @@ body {
   }
 }
 
+/*!
+component > button
+------------------------------
+*/
+/*💡ここに『ボタンコンポーネントのコード』を書く*/
+/*!
+component > pagination
+------------------------------
+*/
+/*💡ここに『ページネーションコンポーネントのコード』を書く*/
+/*!
+component > thumbnail
+------------------------------
+*/
+/*💡ここに『サムネイルコンポーネントのコード』を書く*/
+/*!
+component > thumbnails
+------------------------------
+*/
+/*💡ここに『サムネイル（複数）コンポーネントのコード』を書く*/
+/*!
+component > title
+------------------------------
+*/
+/*💡ここに『タイトルコンポーネントのコード』を書く*/
+/*!
+layout > container
+------------------------------
+*/
+.l-container, .l-container-s {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.l-container-s {
+  max-width: var(--width-content-s);
+}
+
+.l-container {
+  max-width: var(--width-content);
+}
+
+/*!
+layout > footer
+------------------------------
+*/
+/*💡ここに『フッターのコード』を書く*/
+/*!
+layout > header
+------------------------------
+*/
+/*💡ここに『ヘッターのコード』を書く*/
+/*!
+layout > section-body
+------------------------------
+*/
+.l-section-body-s {
+  margin-top: 24px;
+}
+
+.l-section-body-m {
+  margin-top: 40px;
+}
+
+.l-section-body-l {
+  margin-top: 64px;
+}
+
+.l-section-body-xl {
+  margin-top: 80px;
+}
+
+/*!
+layout > section
+------------------------------
+*/
+.l-section {
+  padding: 56px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .l-section {
+    padding: 64px 0;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
