--- a/sass/global/_color.scss
+++ b/sass/global/_color.scss
@@ -9,6 +9,7 @@ global > color
   --color-bg-black: #000000;
   --color-bg-white: #ffffff;
   --color-bg-gray: #d1d1d1;
+  --color-bg-gray-light: #f8f8f8;
   --color-bg-gold: #aca56c;
   --color-bg-orange: #d0a85e;
   --color-bg-blue: #6c9dac;
@@ -17,7 +18,7 @@ global > color
   --color-border-gray: #dddddd;
   --color-border-primary: #c5ab5f;
   --color-border-white: #ffffff;
-  --color-font-gray: #666666;
+  --color-font-gray: #c7c7c7;
   --color-font-white: #ffffff;
   --color-font-base: #000000;
 }
