--- a/css/style.css
+++ b/css/style.css
@@ -360,15 +360,15 @@ component > button
   font-size: 14px;
   font-weight: 500;
   display: inline-block;
+  transition: background-color 0.3s;
+}
+.c-button:hover {
+  background-color: var(--color-bg-primary-hover);
 }
 
 @media (width >= 768px) {
   .c-button {
     font-size: 16px;
-    transition: background-color 0.3s;
-  }
-  .c-button:hover {
-    background-color: var(--color-bg-primary-hover);
   }
 }
 .c-button--size-small {
@@ -379,7 +379,7 @@ component > button
   place-items: center;
 }
 
-.c-button--size-midium {
+.c-button--size-medium {
   width: 100%;
   max-width: 180px;
   height: 45px;
@@ -517,13 +517,14 @@ layout > header
 .header-container {
   display: flex;
   width: 90%;
-  margin: 0 auto;
-  padding-top: 18.5px;
+  height: 65px;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
 
 .header-container a {
   display: flex;
-  align-items: flex-end;
 }
 
 .header-items {
@@ -540,10 +541,27 @@ layout > header
   height: 32px;
 }
 
-.header-menu {
+.header-nav {
   height: 40px;
   background-color: var(--color-bg-primary);
-  margin-top: 18.5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-menu {
+  width: 90%;
+  overflow-x: auto;
+}
+
+.header-menu-list {
+  width: max-content;
+  display: flex;
+  list-style: none;
+}
+
+.header-menu-list a {
+  color: var(--color-font-white);
 }
 
 /*!
