--- a/css/style.css
+++ b/css/style.css
@@ -515,7 +515,6 @@ layout > header
 */
 .header {
   width: 100%;
-  max-height: 105px;
 }
 
 .header-container {
@@ -582,6 +581,9 @@ layout > header
   width: max-content;
   display: flex;
   list-style: none;
+}
+.header-menu-list a:hover {
+  color: gray;
 }
 
 .header-menu-list a {
