--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,7 +7,6 @@ layout > header
 
 .header {
   width: 100%;
-  max-height: 105px;
 }
 
 .header-container {
@@ -71,6 +70,10 @@ layout > header
   width: max-content;
   display: flex;
   list-style: none;
+  & a:hover{
+    // opacity: 0.5;
+    color: gray;
+  }
 }
 
 .header-menu-list a {
