--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,6 +1,12 @@
+@use "../global/" as g;
+
 /*!
 layout > footer
 ------------------------------
 */
-
-/*💡ここに『フッターのコード』を書く*/
+.footer-pc {
+  width: 100%;
+  background-image: url(../../img/footer/bg-cta-sp\ 1.png);
+  background-size: cover;
+  position: relative;
+}
