--- a/sass/global/_color.scss
+++ b/sass/global/_color.scss
@@ -3,7 +3,7 @@ global > color
 ------------------------------
 */
 :root {
-  --color-bg-primary-hover: #fcf1cf;
+  --color-bg-primary-hover: #c8a94b;
   --color-bg-primary: #c5ab5f;
   --color-bg-primary-light: rgba(197, 172, 95, 0.1);
   --color-bg-black: #000000;
