--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ global > color
 ------------------------------
 */
 :root {
-  --color-bg-primary-hover: #fcf1cf;
+  --color-bg-primary-hover: #c8a94b;
   --color-bg-primary: #c5ab5f;
   --color-bg-primary-light: rgba(197, 172, 95, 0.1);
   --color-bg-black: #000000;
@@ -351,7 +351,7 @@ body {
 }
 
 html {
-  scrollbar-color: var(--color-bg-gray) white;
+  scrollbar-color: var(--color-bg-gray) rgb(154, 127, 46);
 }
 
 /*!
@@ -367,6 +367,18 @@ component > button
   transition: background-color 0.3s;
 }
 .c-button:hover {
+  background-color: var(--color-bg-primary-hover);
+}
+
+.c-button-white {
+  color: var(--color-font-base);
+  background-color: var(--color-bg-white);
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+  transition: background-color 0.3s;
+}
+.c-button-white:hover {
   background-color: var(--color-bg-primary-hover);
 }
 
@@ -386,6 +398,7 @@ component > button
 .c-button--size-medium {
   width: 100%;
   max-width: 180px;
+  border-radius: 100px;
   height: 45px;
   display: grid;
   place-items: center;
@@ -508,11 +521,80 @@ layout > container
 layout > footer
 ------------------------------
 */
-.footer-pc {
+.footer-container {
   width: 100%;
-  background-image: url(../../img/footer/bg-cta-sp\ 1.png);
+  background-image: url(../../img/footer/bg-cta-sp.png);
   background-size: cover;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+@media (width >= 768px) {
+  .footer-container {
+    width: 100%;
+    background-image: url(../../img/footer/bg-cta.png);
+    flex-direction: row-reverse;
+  }
+}
+
+.footer-container-pc {
+  height: 183px;
+}
+
+.footer-container-pc img {
+  width: 324px;
+  height: auto;
+}
+@media (width >= 768px) {
+  .footer-container-pc img {
+    width: 304px;
+  }
+}
+
+.footer-container-items {
+  margin-top: 24px;
+  flex-direction: column;
+}
+@media (width >= 768px) {
+  .footer-container-items {
+    margin: 0 40px 0 0;
+  }
+}
+
+.footer-container-items img {
+  margin: 0 auto;
+}
+@media (width >= 768px) {
+  .footer-container-items img {
+    width: 415px;
+    height: 49px;
+  }
+}
+
+.footer-container-items p {
+  font-size: 12px;
+  color: var(--color-font-white);
+  text-align: center;
+  margin-top: 5px;
+}
+@media (width >= 768px) {
+  .footer-container-items p {
+    font-size: 14px;
+    text-align: start;
+    margin-top: 12px;
+    line-height: 1;
+  }
+}
+
+@media (width >= 768px) {
+  .footer-container-items div {
+    margin: 16px 0 0 0;
+  }
+}
+
+.footer-container-items span {
+  font-weight: bold;
 }
 
 /*!
@@ -533,6 +615,7 @@ layout > header
 }
 @media (width >= 768px) {
   .header-container {
+    width: 80%;
     height: 75px;
   }
 }
@@ -581,6 +664,11 @@ layout > header
 .header-menu {
   width: 90%;
   overflow-x: auto;
+}
+@media (width >= 768px) {
+  .header-menu {
+    width: 80%;
+  }
 }
 
 .header-menu-list {
