--- a/sass/component/_button.scss
+++ b/sass/component/_button.scss
@@ -18,6 +18,19 @@ component > button
   }
 }
 
+.c-button-white {
+  color: var(--color-font-base);
+  background-color: var(--color-bg-white);
+  font-size: 14px;
+  font-weight: 500;
+  display: inline-block;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: var(--color-bg-primary-hover);
+  }
+}
+
 @include g.min(md) {
   .c-button {
     font-size: 16px;
@@ -34,6 +47,7 @@ component > button
 .c-button--size-medium {
   width: 100%;
   max-width: 180px;
+  border-radius: 100px;
   height: 45px;
   display: grid;
   place-items: center;
