--- a/css/style.css
+++ b/css/style.css
@@ -603,7 +603,8 @@ layout > footer
 
 @media (width >= 768px) {
   .footer-main {
-    max-width: 1080px;
+    width: 80%;
+    max-width: none;
   }
 }
 
@@ -670,13 +671,17 @@ layout > footer
   font-size: 12px;
 }
 
-.footer-list-link li ::after {
+.footer-list-link li:not(:first-child)::before {
   content: "/";
+  padding: 2px;
 }
 
 .footer-list-link a {
   text-decoration: none;
   color: var(--color-font-base);
+}
+.footer-list-link a:hover {
+  opacity: 0.3;
 }
 
 .copyright {
