--- a/sass/page/_top.scss
+++ b/sass/page/_top.scss
@@ -1,6 +1,69 @@
+@use "../global/" as g;
+
 /*!
 page > top
 ------------------------------
 */
 
-/*💡ここに『トップページのコード』を書く*/
+.top-kv {
+  width: 100%;
+  padding: 56px 0 8px 0;
+  background-image: url(../../img/top/bg-pattern-kv@2x.png);
+  background-size: auto;
+  background-repeat: repeat;
+  text-align: center;
+}
+
+.top-kv-container {
+  display: inline-block;
+  border: solid;
+  border-color: var(--color-border-primary);
+  border-radius: 16px;
+}
+
+.top-kv-thumbnail {
+  height: 160px;
+  border-radius: 16px;
+}
+
+.top-kv-thumbnail img {
+  width: 100%;
+  height: 160px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+
+.top-kv-title {
+  padding: 16px;
+  background-color: var(--color-bg-white);
+  border-bottom-left-radius: 16px;
+  border-bottom-right-radius: 16px;
+}
+
+.top-kv-button {
+  background-color: var(--color-bg-gold);
+  font-size: 12px;
+}
+
+.top-kv-text h1 {
+  text-align: start;
+  font-size: 18px;
+}
+
+.top-kv-text p {
+  text-align: right;
+  font-size: 12px;
+}
+
+.top-kv-pine {
+  display: flex;
+  position: relative;
+  top: 110px;
+}
+
+.top-kv-musha {
+  padding-right: 5%;
+  display: flex;
+  flex-direction: row-reverse;
+  margin-top: -62px;
+}
