--- a/css/style.css
+++ b/css/style.css
@@ -848,17 +848,50 @@ page > top
   border-color: var(--color-border-primary);
   border-radius: 16px;
 }
+@media (width >= 768px) {
+  .top-kv-container {
+    display: flex;
+    flex-direction: row-reverse;
+    margin: auto;
+    max-width: 650px;
+    height: 200px;
+  }
+}
 
 .top-kv-thumbnail {
   height: 160px;
-  border-radius: 16px;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+}
+@media (width >= 768px) {
+  .top-kv-thumbnail {
+    max-width: 325px;
+  }
 }
 
-.top-kv-thumbnail img {
+.top-kv-img-sp {
   width: 100%;
   height: 160px;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
+}
+@media (width >= 768px) {
+  .top-kv-img-sp {
+    display: none;
+  }
+}
+
+.top-kv-img {
+  display: none;
+}
+@media (width >= 768px) {
+  .top-kv-img {
+    display: block;
+    max-width: 100%;
+    height: 197px;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+  }
 }
 
 .top-kv-title {
@@ -867,20 +900,47 @@ page > top
   border-bottom-left-radius: 16px;
   border-bottom-right-radius: 16px;
 }
+@media (width >= 768px) {
+  .top-kv-title {
+    padding: 0;
+    border-bottom-right-radius: 0;
+    border-top-left-radius: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 325px;
+  }
+}
+
+@media (width >= 768px) {
+  .top-kv-title-wrapper {
+    height: 66%;
+    width: 78%;
+  }
+}
 
 .top-kv-button {
   background-color: var(--color-bg-gold);
   font-size: 12px;
 }
 
+.top-kv-text {
+  margin-top: 8px;
+}
+
 .top-kv-text h1 {
   text-align: start;
   font-size: 18px;
 }
-
 .top-kv-text p {
   text-align: right;
   font-size: 12px;
+  color: #666666;
+}
+@media (width >= 768px) {
+  .top-kv-text p {
+    margin-top: 1rem;
+  }
 }
 
 .top-kv-pine {
