--- a/css/style.css
+++ b/css/style.css
@@ -430,11 +430,6 @@ component > pagination
 component > thumbnail
 ------------------------------
 */
-.c-thumbnail:hover,
-.c-thumbnail-large:hover {
-  opacity: 0.5;
-}
-
 .c-thumbnail {
   max-width: 324px;
   border-radius: 16px;
@@ -846,6 +841,11 @@ page > top
     padding: 46px 0 46px 0;
   }
 }
+@media (width >= 1300px) {
+  .top-kv {
+    padding-right: 5%;
+  }
+}
 
 .top-kv-container {
   display: inline-block;
@@ -875,6 +875,11 @@ page > top
     height: 273px;
     position: relative;
     z-index: 20;
+  }
+}
+@media (width >= 1300px) {
+  .top-kv-container {
+    margin: auto;
   }
 }
 
@@ -1013,7 +1018,10 @@ page > top
 }
 @media (width >= 1300px) {
   .top-kv-icon {
-    width: 1230px;
+    width: auto;
+    min-width: 1300px;
+    max-width: 1800px;
+    margin-right: auto;
   }
 }
 
